# offline-debug

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
offline_debug/: __init__.py  serializer.py
offline_debug/_inner/: c_api.py  frame_c_api.py  load_traceback.py  models.py  save_traceback.py
offline_debug/_inner/c_api/: __init__.py  _create_frame.py  _link_frame.py
tests/: __init__.py  debug.py  test_bytesio.py  test_f_back_discovery.py  test_integration.py  test_module_name.py  test_serializer.py
tests/_inner/: test_load_traceback.py  test_save_traceback.py
tests/_inner/c_api/: test__link_frame.py
tests/manual_tests/: __init__.py  global_debug.py
