[project]
name = "offline-debug"
version = "0.1.0"
description = "A package for serializing and deserializing exceptions and tracebacks."
authors = [
    { name = "Itai Elidan", email = "itaielidan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["offline_debug"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
