[project]
name = "offline-debug"
version = "0.1.0-beta1"
description = "Debug exceptions offline by saving them to a dump and raising them at a later point."
readme = "README.md"
authors = [
    { name = "Itai Elidan", email = "itaielidan@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/INTODAN/offline-debug"
Repository = "https://github.com/INTODAN/offline-debug"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.27",
]
